--- a/gh-pages/404.html
+++ b/gh-pages/404.html
@@ -1,6 +1,9 @@
 ---
 layout: notfound
-title: xmlrpc-message-umd
+title: xmlrpc-message-umd | 404 - Page not found
+sitemap:
+  priority: 0.2
+  changefreq: yearly
 ---
 
     <div class="container" id="main">
@@ -15,7 +18,7 @@ title: xmlrpc-message-umd
       </div>
       <div class="row">
         <div class="col-12 col-xs-12 col-sm-12 col-lg-12">
-          <a id="backlink" href="index.html"><i class="fa fa-github"></i> Back</a>
+          <a id="backlink" href="index.html"><i class="fa fa-home"></i> Back</a>
         </div>
       </div>
     </div>
