--- a/gh-pages/amd_tests.html
+++ b/gh-pages/amd_tests.html
@@ -1,12 +1,15 @@
 ---
 layout: tests
-title: xmlrpc-message-umd
+title: xmlrpc-message-umd - Tests (using AMD modules)
+sitemap:
+  priority: 0.5
+  changefreq: monthly
 ---
 
     <div class="container">
       <div class="row">
         <div class="col-12 col-xs-12 col-sm-12 col-lg-12">
-          <h1>AMD tests</h1>
+          <h1>{{ site.name }} - AMD tests</h1>
           <!-- Required for browser reporter -->
           <div id="mocha"></div>
         </div>
