--- a/test/tests_global.html
+++ b/test/tests_global.html
@@ -6,9 +6,10 @@
     <title>Tests</title>
     <meta name="description" content="Another JavaScript UMD module (works in Require.js/AMD loaders, Node.js, and browser globals)">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
   </head>
   <body>
+    <br>Your are viewing global tests.
+    <br><a href="tests_amd.html">Switch to AMD tests</a>.<br><br><br>
     <div id="mocha"></div>
     <script type="text/javascript" src="assets/js/lib/mocha.js"></script>
     <script type="text/javascript" src="assets/js/lib/chai.js"></script>
