--- a/test/tests_amd.html
+++ b/test/tests_amd.html
@@ -6,9 +6,10 @@
     <title>Tests</title>
     <meta name="description" content="Another JavaScript UMD module (works in Require.js/AMD loaders, Node.js, and browser globals)">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
   </head>
   <body>
+    <br>Your are viewing AMD tests.
+    <br><a href="tests_global.html">Switch to global tests</a>.<br><br><br>
     <div id="mocha"></div>
     <script type="text/javascript" data-main="tests" src="require.js"></script>
   </body>
