--- a/test/tests_global.html
+++ b/test/tests_global.html
@@ -12,11 +12,13 @@
     <br>Your are viewing global tests.
     <br><a href="tests_amd.html">Switch to AMD tests</a>.<br><br><br>
     <div id="mocha"></div>
+    <!-- Test libs -->
     <script type="text/javascript" src="assets/lib/mocha/mocha.js"></script>
     <script type="text/javascript" src="assets/lib/chai/chai.js"></script>
     <script type="text/javascript" src="assets/lib/lodash/dist/lodash.min.js"></script>
     <script type="text/javascript" src="assets/lib/btoa-umd/dist/btoa-umd.min.js"></script>
-    <script type="text/javascript" src="assets/lib/xmlrpc-message-umd.js"></script>
+    <!-- This project -->
+    <script type="text/javascript" src="assets/lib/xmlrpc-message-umd/dist/xmlrpc-message-umd.js"></script>
     <script type="text/javascript" src="tests.js"></script>
   </body>
 </html>
