chore: update workflow

--- a/test/tests_global.html
+++ b/test/tests_global.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="app/lib/chai/chai.js"></script>
     <!-- This project -->
     
-      <script type="text/javascript" src="app/lib/btoa-umd/dist/btoa-umd.js"></script>
+      <script type="text/javascript" src="app/lib/btoa-umd/dist/btoa-umd.min.js"></script>
     
     <script type="text/javascript" src="app/lib/xmlrpc-message-umd/dist/xmlrpc-message-umd.js"></script>
     <script type="text/javascript" src="tests.js"></script>
